Create mailer for sending tokens over email
